# starharbour

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: report.md  requirements.md  state-diagram.md
src/starharbour/: __init__.py  activities.py  clients.py  demo.py  domain.py  engine.py  events.py  store.py  workflow.py
tests/: conftest.py  test_integration_durability.py  test_integration_scenarios.py  test_unit_clients.py  test_unit_workflow.py
