[project]
name = "starharbour"
version = "0.1.0"
description = "Durable order-ahead fulfilment workflow (StarHarbour)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
starharbour-demo = "starharbour.demo:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starharbour"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["starharbour"]
